--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "magic-patterns-vite-template",
+  "name": "anuratyrespvtltd",
   "version": "0.0.1",
   "private": true,
   "type": "module",
+  "homepage": "https://chamathkadinusahani3.github.io/anuratyrespvtltd",
   "scripts": {
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -29,6 +32,7 @@
     "eslint": "^8.50.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "gh-pages": "^6.3.0",
     "postcss": "latest",
     "tailwindcss": "3.4.17",
     "typescript": "^5.5.4",
